--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <main class="text-center">
       <!-- our services -->
 
-      <section class="flex justify-center items-center">
+      <section class="flex justify-center items-center bg-gray-200">
         <div
           class="relative flex border border-2 w-[600px] h-[600px] flex-col items-center justify-center"
         >
-          <div class="absolute top-0 ">
+          <div class="absolute top-0">
             <img
               class="w-[120px] rounded-full"
               src="images/disease.png"
@@ -130,6 +130,72 @@
               alt=""
             />
           </div>
+        </div>
+      </section>
+
+      <!-- our chamber -->
+
+      <section class="lg:px-36 lg:py-16 md:px-16 md:py-8 p-5 space-y-4">
+        <!-- services info -->
+        <div class="space-y-4">
+          <h1 class="text-4xl lg:text-6xl font-semibold mb-10">চেম্বার</h1>
+        </div>
+        <!-- cards -->
+
+        <div class="flex lg:flex-row text-xl flex-col lg:gap-6 gap-y-10">
+          <!-- card-1 -->
+
+          <div class="text-left space-y-4 border border-2 rounded-xl shadow-lg">
+            <img class="rounded-t-xl" src="images/dmc.jpg" alt="" />
+            <div class="p-4 space-y-4">
+              <a class="underline uner" href="https://dmch.gov.bd/"><h1 class="text-4xl">ঢাকা মেডিকেল কলেজ হাসপাতাল।</h1></a>
+              <p>
+                রোগী দেখার সময়: প্রতি শনিবার থেকে বুধবার।
+              </p>
+            </div>
+          </div>
+
+
+
+          <!-- card-2 -->
+          <div class="text-left space-y-4 border border-2 rounded-xl shadow-lg">
+            <img class="rounded-t-xl" src="images/general.jpg" alt="" />
+            <div class="p-4 space-y-4 leading-normal">
+              <a class="underline underline-offset-8" href="https://www.laksamgeneralhospital.com/"><h1 class="text-4xl">লাকসাম জেনারেল হাসপাতাল।</h1></a>
+              <p>
+                বাইপাস রোড, লাকসাম, কুমিল্লা। <br />
+                রুম নং: ২১৭।<br />
+                সিরিয়াল: ০১৭১২-০০০৩৩৫, ০১৮৬৫-০৪১৭৬৬ ০১৯৩৩-১৮৫৬৭৬।<br/>
+                রোগী দেখার সময়: প্রতি বৃহস্পতিবার বিকাল ৩টা - রাত ৮:৩০ পর্যন্ত।
+              </p>
+            </div>
+          </div>
+
+          <!-- card-3 -->
+          <div class="text-left space-y-4 border border-2 rounded-xl shadow-lg">
+            <img class="rounded-t-xl" src="images/prime.jpg" alt="" />
+            <div class="p-4 space-y-4">
+             <a class="underline underline-offset-4" href="https://www.primehospitalltd.com/"> <h1 class="text-4xl">প্রাইম হসপিটালস্ লিঃ</h1></a>
+             <p>
+              হাসপাতাল রোড, মাইজদী, নোয়াখালী। <br>
+              সিরিয়াল: ০১৭৩০-৩০৬১৮৭, ০১৭১২-০২৫৯৯৫ <br>
+              রোগী দেখার সময়: প্রতি শুক্রবার সকাল ১০টা থেকে বিকাল ৫টা পর্যন্ত।
+            </p>
+            </div>
+          </div>
+
+        <!-- card-4 -->
+        <div class="text-left space-y-4 border border-2 rounded-xl shadow-lg">
+          <img class="rounded-t-xl" src="images/prime.jpg" alt="" />
+          <div class="p-4 space-y-4">
+            <a class="underline underline-offset-4" href="https://www.primehospitalltd.com/"> <h1 class="text-4xl">প্রাইম হসপিটালস্ লিঃ</h1></a>
+            <p>
+              চৌমুহনী চৌরাস্তা, বেগমগঞ্জ, নোয়াখালী। <br>
+              সিরিয়াল: ০১৩১৩-৭৮৯০০১, ০১৩১৩৭৮৯০০২ <br>
+              রোগী দেখার সময়: প্রতি শুক্রবার বিকাল ৫টা থেকে সন্ধ্যা ৭টা পর্যন্ত।
+            </p>
+          </div>
+        </div>          
         </div>
       </section>
     </main>
